--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        google()
+        // google()
         jcenter { url "https://jcenter.bintray.com/" }
         maven {url "https://repo.spring.io/plugins-release/"}
         mavenCentral()
